# agentic-sim

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: branch-name.yml  ci.yml
cmd/simserver/: main.go
deploy/grafana/: agentic-sim-dashboard.json
examples/adk-agent/: Dockerfile  README.md  main.py  pyproject.toml
examples/go-agent/: README.md  main.go
examples/go-agent/goagent/: agent.go  agent_test.go
examples/langgraph-agent/: Dockerfile  README.md  main.py  pyproject.toml
internal/adk/: runner.go  runner_rule.go  runner_rule_test.go  runner_simple_test.go  runner_test.go
internal/agents/: agent.go  basic_agent.go  basic_agent_reasoner_test.go  basic_agent_test.go
internal/api/: a2a.go  e2e_test.go  handler.go  handler_test.go  simservice.go
internal/config/: config.go
internal/model/: action.go  action_test.go
internal/reasoning/: mock.go  reasoner.go
internal/simulation/: a2a_client.go  engine.go  engine_factory_test.go  engine_test.go  manager.go  manager_test.go
internal/storage/: store.go
internal/storage/memory/: memory.go
internal/telemetry/: context.go  context_test.go  metrics.go  setup.go
internal/world/: action.go  action_test.go  agent_card.go  events.go  helpers_test.go  snapshot.go  snapshot_test.go  view.go  view_test.go  world.go  world_test.go
pkg/utils/: logging.go
