[project]
name = "adk-agent"
version = "0.1.0"
description = "Google ADK-based A2A reference agent for agentic-sim"
requires-python = ">=3.10"
dependencies = [
    "google-adk[a2a]>=2.4.0,<3",
    "a2a-sdk[http-server]>=0.3.4,<0.4",
    "litellm>=1.0",
    "uvicorn>=0.30",
]

[tool.uv]
package = false
